--- a/index.html
+++ b/index.html
@@ -5,6 +5,129 @@
     <title>HTML Academy: Нёрдс</title>
   </head>
   <body>
+    <header>
+    <nav>
+      <ul>
+           <li> <a href="#">логотип</a></li>
+           <li> <a href="#">Студия</a> </li>
+           <li> <a href="#">Клиенты</a> </li>
+           <li> <a href="catalog.html">Магазин</a> </li>
+           <li> <a href="#">Контакты</a> </li>
+      </ul>
+
+      <a href="#"> Корзина </a>
+
+    </nav>
+
+  </header>
+
+
+  <main>
+
+    <article>
+
+       <h1>Долго, дорого,скрупулезно.</h1>
+
+       <p>Математически выверенный дизайн
+       для вашего сайта или мобильного приложения.</p>
+
+       <a href="#">Узнать больше</a>
+
+</article>
+
+    <section>
+      <div>
+    <h2> ВЕБ-САЙТЫ    </h2>
+
+    <img src="#" alt="">
+
+    <p>Мир никогда не будет прежним<br> после того как увидит ваш сайт!</p>
+
+      <a href="#">Заказать</a>
+</div>
+
+    <div>
+          <h2> ПРИЛОЖЕНИЯ    </h2>
+
+          <img src="#" alt="">
+
+
+         <p>Покорите топ-10 приложений в<br> AppStore и Google Play</p>
+
+         <a href="#">Заказать</a>
+  </div>
+
+
+    <div>
+            <h2> ПРЕЗЕНТАЦИИ    </h2>
+
+            <img src="#" alt="">
+
+            <p>Вы даже не подозреваете,<br> насколько вы изумительны!</p>
+
+            <a href="#">Заказать</a>
+
+  </div>
+</section>
+  </main>
+<article>
+  <h3>Мы — маленькая, но гордая дизайн-студия из Краснодара.</h3>
+
+  <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br>
+превыше креатива. Работаем не покладая рук, как роботы.</p>
+
+
+     <p>Выполняем заказы на разработку:</p>
+<ul>
+     <li>Веб-сайтов любой сложности</li>
+     <li>Мобильных приложений для iOS и Android</li>
+     <li>Слайдшоу и видео для корпоративных презентаций</li>
+</ul>
+</article>
+<aside>
+  <figure>
+  <figcaption>с 2004 года Любим точность во всем:</figcaption>
+</figure>
+
+<span> 146% Уровень
+самоотдачи</span>
+
+<span>100%Соблюдение
+сроков</span>
+
+<span>50%Минимальная
+предоплата</span>
+</aside>
+
+
+  <section>Наши партнёры</section>
+
+
+<div> карта проезда</div>
+
+
+<div>
+  <p>NЁRDS DESIGN STUDIO</p>
+
+  <p>  191186, Санкт-Петербург,<br>
+      ул. Б. Конюшенная, д. 19/8</p>
+
+  <p>тел. +7 (812) 275-75-75</p>
+</div>
+
+
+<footer>
+<ul>
+<li><a href="#">VC</a></li>
+<li><a href="#">Facebook</a></li>
+<li><a href="#">Instagram</a></li>
+</ul>
+
+<p>Давайте дружить, это выгодно!
+Скидка 10% для друзей из социальных сетей.</p>
+
+
+</footer>
 
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
 
