--- a/catalog.html
+++ b/catalog.html
@@ -16,7 +16,7 @@
            <li> <a href="#">Контакты</a> </li>
       </ul>
 
-      <a href="#"> Корзина </a>
+      <a href="#"> Корзина  </a>
 
     </nav>
 
@@ -44,7 +44,7 @@
     <li><a href="#">Instagram</a></li>
     </ul>
 
-    <p>Давайте дружить, это выгодно!
+    <p>Давайте дружить, это выгодно!!
     Скидка 10% для друзей из социальных сетей.</p>
 
   </footer>
