--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <header>
+
     <nav>
       <ul>
            <li> <a href="#">логотип</a></li>
@@ -20,20 +21,20 @@
     </nav>
 
   </header>
+    <main>
+          <h1>Студия дизайна Nerds</h1>
 
+     <section>
 
-  <main>
-
-    <article>
-
-       <h1>Долго, дорого,скрупулезно.</h1>
+       <P>Долго, дорого,скрупулезно.</p>
 
        <p>Математически выверенный дизайн
        для вашего сайта или мобильного приложения.</p>
 
        <a href="#">Узнать больше</a>
 
-</article>
+     </section>
+
 
     <section>
       <div>
@@ -69,8 +70,8 @@
 
   </div>
 </section>
-  </main>
-<article>
+
+<section>
   <h3>Мы — маленькая, но гордая дизайн-студия из Краснодара.</h3>
 
   <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br>
@@ -83,8 +84,10 @@
      <li>Мобильных приложений для iOS и Android</li>
      <li>Слайдшоу и видео для корпоративных презентаций</li>
 </ul>
-</article>
-<aside>
+</section>
+
+
+<section>
   <figure>
   <figcaption>с 2004 года Любим точность во всем:</figcaption>
 </figure>
@@ -97,7 +100,7 @@
 
 <span>50%Минимальная
 предоплата</span>
-</aside>
+</section>
 
 
   <section>Наши партнёры</section>
@@ -115,7 +118,7 @@
   <p>тел. +7 (812) 275-75-75</p>
 </div>
 
-
+</main>
 <footer>
 <ul>
 <li><a href="#">VC</a></li>
