--- a/catalog.html
+++ b/catalog.html
@@ -20,12 +20,103 @@
 
     </nav>
 
-    <h1> Магазин готовых шаблонов </h1>
 
   </header>
 
+<main>
 
-<main></main>
+<h1> Магазин готовых шаблонов </h1>
+
+<section class="catalog">
+
+<article>
+         <h2>Sedona</h2>
+        <img src="#" alt="макет седона">
+</article>
+
+<article>
+         <h2>Pink</h2>
+        <img src="#" alt="макет пинк">
+</article>
+
+<article>
+         <h2>Barbershop</h2>
+        <img src="#" alt="макет барбершоп">
+</article>
+
+<article>
+         <h2>Misaka</h2>
+        <img src="#" alt="макет мисаки">
+</article>
+
+<article>
+         <h2>Учёба</h2>
+        <img src="#" alt="макет учёбы">
+</article>
+
+<article>
+         <h2>Кваст</h2>
+        <img src="#" alt="макет кваса">
+</article>
+
+</section>
+
+<section>
+
+<div>
+  <h3>Стоимость</h3>
+  
+  ОТ   ДО
+
+</div>
+
+<div> 
+<h3>Сетка</h3>
+<ul>
+
+    <li>Адаптивная</li>
+
+   <li>Фиксированная</li>
+
+   <li>Резиновая</li> 
+  
+ </ul> 
+
+</div>
+
+<div> 
+  <h3>Особенности</h3>
+
+<ul>
+  <li>Слайдер</li>
+
+  <li>Блок преимуществ</li>
+
+  <li>Новости</li>
+
+  <li>Галерея</li>
+
+  <li>Корзина</li>
+</ul>  
+
+ </div>
+
+  <button> Показать </button>
+</section>
+
+<section>
+  Сортировать:
+  
+  <ul>
+  <li>по цене</li>
+   <li>  по типу</li>
+    <li> по названию</li>
+  </ul>
+</section>
+
+
+
+
 
 <div>
     <p>NЁRDS DESIGN STUDIO</p>
@@ -36,7 +127,7 @@
    <p>тел. +7 (812) 275-75-75</p>
 </div>
 
-
+</main>
   <footer>
     <ul>
     <li><a href="#">VC</a></li>
@@ -44,7 +135,7 @@
     <li><a href="#">Instagram</a></li>
     </ul>
 
-    <p>Давайте дружить, это выгодно!!
+    <p>Давайте дружить, это выгодно!
     Скидка 10% для друзей из социальных сетей.</p>
 
   </footer>
